feat: implement part c of assignment 2

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 163,
    "id": "66585a61",
    "metadata": {},
    "outputs": [
@@ -52,9 +52,9 @@
       "| a2_t4a_compute_max_value_per_sensor               | completed      |\n",
       "| a2_t4b_compute_global_max_value                   | completed      |\n",
       "| a2_t5_compute_max_weekly_visitors                 | completed      |\n",
-      "| a2_t6_customers_with_certain_visa_payment         | not attempted  |\n",
-      "| a2_t7_find_payment_types                          | not attempted  |\n",
-      "| a2_t8_quantities_per_city                         | not attempted  |\n",
+      "| a2_t6_customers_with_certain_visa_payment         | completed      |\n",
+      "| a2_t7_find_payment_types                          | completed      |\n",
+      "| a2_t8_quantities_per_city                         | completed      |\n",
       "----------------------------------------------------------------------\n"
      ]
     }
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "9caf3eff",
    "metadata": {},
    "outputs": [],
@@ -1729,20 +1729,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "41c12099",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+---------+--------+---------+\n",
+      "|customer_id|firstname|lastname|     city|\n",
+      "+-----------+---------+--------+---------+\n",
+      "| 1122334455|      Ann| O'Brien|Rotterdam|\n",
+      "| 1231231231|     John|     Doe|Amsterdam|\n",
+      "| 1234567890|     Paul|  Murphy|   Diemen|\n",
+      "| 9876543210|     Jack|  Murphy|  Utrecht|\n",
+      "| 9999999999|    Norah|   Jones|Amsterdam|\n",
+      "+-----------+---------+--------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "customers.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "33cb99f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----+--------+----+-----------------+\n",
+      "|customer_id|model|quantity|paid|  type_of_payment|\n",
+      "+-----------+-----+--------+----+-----------------+\n",
+      "| 1122334455| 2010|       1|2300|mastercard credit|\n",
+      "| 1122334455| 3001|       1|  99|             cash|\n",
+      "| 1231231231| 2002|       2|1898|      visa credit|\n",
+      "| 1231231231| 3002|       1| 239|             cash|\n",
+      "| 1234567890| 1001|       1|1902|mastercard credit|\n",
+      "| 9876543210| 1007|       1| 510|       visa debit|\n",
+      "| 9876543210| 1007|       3|1530|       visa debit|\n",
+      "| 9876543210| 2002|       1| 949|       visa debit|\n",
+      "| 9999999999| 1007|       1| 459|      visa credit|\n",
+      "| 9999999999| 3007|       2| 360|      visa credit|\n",
+      "+-----------+-----+--------+----+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "sales.show()"
    ]
@@ -1765,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "3b33ead9",
    "metadata": {},
    "outputs": [],
@@ -1785,10 +1824,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "6c7c8e3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----+\n",
+      "|     city|count|\n",
+      "+---------+-----+\n",
+      "|Rotterdam|    1|\n",
+      "|Amsterdam|    2|\n",
+      "|   Diemen|    1|\n",
+      "|  Utrecht|    1|\n",
+      "+---------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "cities_with_counts.show()"
    ]
@@ -1810,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "6e04728a",
    "metadata": {},
    "outputs": [],
@@ -1822,10 +1877,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "5e86a1ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+\n",
+      "|  type_of_payment|\n",
+      "+-----------------+\n",
+      "|      visa credit|\n",
+      "|             cash|\n",
+      "|mastercard credit|\n",
+      "|       visa debit|\n",
+      "+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "payment_types.show()"
    ]
@@ -1840,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "141af937",
    "metadata": {},
    "outputs": [],
@@ -1871,26 +1942,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "f2598ce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|customer_id|\n",
+      "+-----------+\n",
+      "| 9999999999|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This is just for local development, you can test different transformations here\n",
     "sales\\\n",
+    "    .select(sales['customer_id'])\\\n",
+    "    .filter(sales['type_of_payment'] == \"visa credit\")\\\n",
+    "    .filter(sales['paid'] < 1000)\\\n",
+    "    .distinct()\\\n",
     "    .show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "ae1374a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def a2_t6_customers_with_certain_visa_payment(sales):\n",
     "    # IMPLEMENT ME\n",
-    "    return sales"
+    "\n",
+    "    customer_ids = sales.select(sales['customer_id'])\n",
+    "    visa_credit_filtered = customer_ids.filter(sales['type_of_payment'] == \"visa credit\")\n",
+    "    paid_filtered = visa_credit_filtered.filter(sales['paid'] < 1000)\n",
+    "    distinct_sales = paid_filtered.distinct()\n",
+    "\n",
+    "    return distinct_sales"
    ]
   },
   {
@@ -1903,10 +1997,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "c72fc683",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PASS: Encountered expected row Row(customer_id='9999999999')\n"
+     ]
+    }
+   ],
    "source": [
     "result = a2_t6_customers_with_certain_visa_payment(sales)\n",
     "verify_sql_result_locally(result, [Row(customer_id='9999999999')])"
@@ -1914,10 +2016,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "id": "b17d4a53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running local tests...\n",
+      "a2_t6_customers_with_certain_visa_payment successfully passed local tests\n",
+      "Running remote test...\n",
+      "Test was successful. Congratulations!\n"
+     ]
+    }
+   ],
    "source": [
     "am.test_student_function(a2_t6_customers_with_certain_visa_payment)"
    ]
@@ -1936,26 +2049,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "a71b2d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+\n",
+      "|type_of_payment|\n",
+      "+---------------+\n",
+      "|    visa credit|\n",
+      "|           cash|\n",
+      "+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This is just for local development, you can test different transformations here\n",
     "sales\\\n",
+    "    .join(customers, \"customer_id\")\\\n",
+    "    .filter(customers['city'] == \"Amsterdam\")\\\n",
+    "    .select('type_of_payment')\\\n",
+    "    .distinct()\\\n",
     "    .show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "d21e0328",
    "metadata": {},
    "outputs": [],
    "source": [
     "def a2_t7_find_payment_types(sales, city, customers):\n",
     "    # IMPLEMENT ME\n",
-    "    return sales"
+    "\n",
+    "    customers_sales_joined = sales.join(customers, \"customer_id\")\n",
+    "    city_filtered = customers_sales_joined.filter(customers['city'] == city)\n",
+    "    type_of_payment_selected = city_filtered.select('type_of_payment')\n",
+    "    distinct_type_of_payments = type_of_payment_selected.distinct()\n",
+    "\n",
+    "    return distinct_type_of_payments"
    ]
   },
   {
@@ -1968,10 +2105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "81932945",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PASS: Encountered expected row Row(type_of_payment='visa credit')\n",
+      "PASS: Encountered expected row Row(type_of_payment='cash')\n"
+     ]
+    }
+   ],
    "source": [
     "result = a2_t7_find_payment_types(sales, \"Amsterdam\", customers)\n",
     "verify_sql_result_locally(result, [Row(type_of_payment='visa credit'), Row(type_of_payment='cash')])"
@@ -1979,10 +2125,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "a4954e68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running local tests...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 289:============================================>            (7 + 1) / 9]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a2_t7_find_payment_types successfully passed local tests\n",
+      "Running remote test...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 310:========================================>                (5 + 1) / 7]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test was successful. Congratulations!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "am.test_student_function(a2_t7_find_payment_types)"
    ]
@@ -2001,26 +2191,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "cf294e88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------+\n",
+      "|     city|sum(paid)|\n",
+      "+---------+---------+\n",
+      "|   Diemen|     1902|\n",
+      "|Rotterdam|     2399|\n",
+      "|Amsterdam|     2956|\n",
+      "|  Utrecht|     2989|\n",
+      "+---------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This is just for local development, you can test different transformations here\n",
     "sales\\\n",
+    "    .join(customers, 'customer_id')\\\n",
+    "    .select('city', 'paid')\\\n",
+    "    .groupby('city')\\\n",
+    "    .sum()\\\n",
     "    .show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "2525fcb6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def a2_t8_quantities_per_city(sales, customers):\n",
     "    # IMPLEMENT ME\n",
-    "    return sales"
+    "\n",
+    "    customers_sales_joined = sales.join(customers, \"customer_id\")\n",
+    "    city_paid_selected = customers_sales_joined.select('city', 'paid')\n",
+    "    grouped_sales_by_city = city_paid_selected.groupby('city')\n",
+    "    summed_sales_by_city = grouped_sales_by_city.sum()\n",
+    "\n",
+    "    return summed_sales_by_city"
    ]
   },
   {
@@ -2033,10 +2249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "id": "bc647bf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PASS: Encountered expected row Row(city='Diemen', amount=1902)\n",
+      "PASS: Encountered expected row Row(city='Rotterdam', amount=2399)\n",
+      "PASS: Encountered expected row Row(city='Amsterdam', amount=2956)\n",
+      "PASS: Encountered expected row Row(city='Utrecht', amount=2989)\n"
+     ]
+    }
+   ],
    "source": [
     "result = a2_t8_quantities_per_city(sales, customers)\n",
     "\n",
@@ -2052,10 +2279,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "id": "54c8c71d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running local tests...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a2_t8_quantities_per_city successfully passed local tests\n",
+      "Running remote test...\n",
+      "Test was successful. Congratulations!\n"
+     ]
+    }
+   ],
    "source": [
     "am.test_student_function(a2_t8_quantities_per_city)"
    ]
